--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <li><a href="#">LINEでお問い合わせ</a></li>
         <div class="dis">
-            <div class="box"><img src="line.jpg" alt=""></div></div>
+            <div class="box"><img src="https://github.com/studiok8/glogdemo/blob/master/LINE.jpg?raw=true" alt=""></div></div>
         <div id="coment">※もう一度押すと閉じます</div>
         <li><a href="https://studiok.sakura.ne.jp">STUDIO-K HP</a></li>
         <li><a href="https://studiok8.github.io/design/">デザイン集</a></li>
