--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <li><a href="https://studiok8.github.io/cafedemo/">Cafe用HPサンプル</a></li>
         <li><a href="https://studiok8.github.io/salondemo/">美容室用HPサンプル</a></li>
         <li><a href="https://studiok8.github.io/companydemo/">Office用HPサンプル</a></li>
+        <li><a href="https://studiok8.github.io/sitedemo/">sitedemo用HPサンプル</a></li>
      </div>
     </ul>
 </aside>
